[package]
name = "tsp_2opt"
version = "0.0.1"
authors = ["mehdi <mehdi-bs@live.fr>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mehdibnc/TSP2opt"
homepage = "https://github.com/mehdibnc/TSP2opt"
readme = "README.md"

[lib]
name = "tsp_2opt"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
maintainer = "Mehdi Bnc"
maintainer-email = "mehdi-bs@live.fr"
requires-python = ">=3.7"
classifier = ["Programming Language :: Python :: 3.7", "Programming Language :: Rust", "Development Status :: 3 - Alpha", "Environment :: MacOS X"]
requires-dist = ["numpy>=1.20.1"]
