[package]
name = "pyext-2opt"
version = "0.1.0"
authors = ["mehdi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "2opt"
crate-type = ["dylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

